fixing transition mobile

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -186,12 +186,12 @@ a {
 
 @media all and (max-width: 45em) {
 	.cart-wrapper {
-		transition: all 0.5s;
-		-webkit-transition: all 0.5s;
+		transition: all 1s;
+		-webkit-transition: all 1s;
 	}
 	.cart-wrapper-active {
-		transition: all 0.5s;
-		-webkit-transition: all 0.5s;
+		transition: all 1s;
+		-webkit-transition: all 1s;
 		width: 75%;
 	}
 }
